// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-iRaSfU dASPpV"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-gqUUDT kiGojW"
    disabled={false}
    size="small"
  >
    <input
      checked={true}
      className="sc-llyFOc fNxKzZ"
      id="test-switch-1"
      onChange={[Function]}
      size="small"
      type="checkbox"
    />
    <span
      checked={true}
<<<<<<< HEAD
      className="sc-imZoBe codXWL"
      size="small"
=======
      className="sc-khrHlC iXtMCL"
      size="sm"
>>>>>>> d7003c6ba82321c17491a2a830ed96b80b233e96
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT dUUges"
      disabled={false}
      size="medium"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="button-switch-1"
        onChange={[Function]}
        size="medium"
        type="checkbox"
      />
      <span
        checked={true}
<<<<<<< HEAD
        className="sc-imZoBe bIZirg"
        size="medium"
=======
        className="sc-khrHlC bhUeiA"
        size="md"
>>>>>>> d7003c6ba82321c17491a2a830ed96b80b233e96
      >
        <span
          className="sc-dOAxzV boWUFJ"
        >
          <p
            className="sc-cQIpJi grZAKh"
          >
            Off
          </p>
          <p
            className="sc-cQIpJi grZAKh"
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT cjazYH"
      disabled={false}
      size="large"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="button-switch-2"
        onChange={[Function]}
        size="large"
        type="checkbox"
      />
      <span
        checked={true}
<<<<<<< HEAD
        className="sc-imZoBe bIZirg"
        size="large"
=======
        className="sc-khrHlC bhUeiA"
        size="lg"
>>>>>>> d7003c6ba82321c17491a2a830ed96b80b233e96
      >
        <span
          className="sc-dOAxzV boWUFJ"
        >
          <p
            className="sc-cQIpJi grZAKh"
          >
            Off
          </p>
          <p
            className="sc-cQIpJi grZAKh"
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`Switch renders Disabled state 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT fbRPPY"
      disabled={true}
      size="small"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
<<<<<<< HEAD
        className="sc-imZoBe codXWL"
        size="small"
=======
        className="sc-khrHlC iXtMCL"
        size="sm"
>>>>>>> d7003c6ba82321c17491a2a830ed96b80b233e96
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT fbRPPY"
      disabled={true}
      size="small"
    >
      <input
        checked={false}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-disabled"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={false}
<<<<<<< HEAD
        className="sc-imZoBe iPejPr"
        size="small"
=======
        className="sc-khrHlC jagbOf"
        size="sm"
>>>>>>> d7003c6ba82321c17491a2a830ed96b80b233e96
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT jLXksI"
      disabled={false}
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-llyFOc cgfpdg"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
<<<<<<< HEAD
        className="sc-imZoBe fdFkSl"
        size="twoxsmall"
=======
        className="sc-khrHlC hRcSLq"
        size="2xs"
>>>>>>> d7003c6ba82321c17491a2a830ed96b80b233e96
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT fNMaSn"
      disabled={false}
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-llyFOc gxTERg"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
<<<<<<< HEAD
        className="sc-imZoBe jvSyUs"
        size="xsmall"
=======
        className="sc-khrHlC UQFTr"
        size="xs"
>>>>>>> d7003c6ba82321c17491a2a830ed96b80b233e96
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT kiGojW"
      disabled={false}
      size="small"
    >
      <input
        checked={true}
        className="sc-llyFOc gxTERg"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
<<<<<<< HEAD
        className="sc-imZoBe jvSyUs"
        size="small"
=======
        className="sc-khrHlC UQFTr"
        size="sm"
>>>>>>> d7003c6ba82321c17491a2a830ed96b80b233e96
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT jLXksI"
      disabled={false}
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-llyFOc cuXITZ"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
<<<<<<< HEAD
        className="sc-imZoBe iltJZy"
        size="twoxsmall"
=======
        className="sc-khrHlC HPTpi"
        size="2xs"
>>>>>>> d7003c6ba82321c17491a2a830ed96b80b233e96
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT fNMaSn"
      disabled={false}
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
<<<<<<< HEAD
        className="sc-imZoBe codXWL"
        size="xsmall"
=======
        className="sc-khrHlC iXtMCL"
        size="xs"
>>>>>>> d7003c6ba82321c17491a2a830ed96b80b233e96
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT kiGojW"
      disabled={false}
      size="small"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
<<<<<<< HEAD
        className="sc-imZoBe codXWL"
        size="small"
=======
        className="sc-khrHlC iXtMCL"
        size="sm"
>>>>>>> d7003c6ba82321c17491a2a830ed96b80b233e96
      />
    </label>
  </div>
</div>
`;
